ingress-sample/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample
spec:
  type: ClusterIP
  selector:
    app: nginx-sample
  ports:
  - port: 80
