ingress-sample/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample
spec:
  rules:
    - host: nginx-sample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-sample
                port:
                  number: 80
